--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "next dev --webpack",
     "build": "next build --webpack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "analyze": "ANALYZE=true npm run build",
+    "clean": "rm -rf .next out",
+    "deploy": "vercel",
+    "deploy:prod": "vercel --prod"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.78.0",
     "framer-motion": "^12.23.24",
     "next": "16.0.1",
     "react": "19.2.0",
